<resources>
    <string name="app_name">Lab 2 Survey</string>
    <string name="home_title">Smart-Travel Survey</string>
    <string name="code_entry">Please enter the code</string>
    <string name="start_button">Start</string>
    <string name="code">COMP7855</string>
    <string name="nationality_title">1. Choose your nationality:</string>
    <string name="age_input">2. Choose your age range:</string>
    <string name="age_range_1">Under 18</string>
    <string name="age_range_2">18-30</string>
    <string name="age_range_3">31-50</string>
    <string name="age_range_4">51-65</string>
    <string name="age_range_5">Above 65</string>
    <string name="btnNext">NEXT</string>
    <string name="travelPurpose">3. Choose the purpose(s) of your most recent travel:</string>
    <string name="travel_rating">4. How would you rate your most recent travel:</string>
    <string name="reason1">Business</string>
    <string name="reason2">Relaxation</string>
    <string name="reason3">Medical Reasons</string>
    <string name="reason4">Family Reunion</string>
    <string name="reason5">Other</string>
    <string name="summary_text">Summary</string>
    <string name="country_text">Country:</string>
    <string name="age_text">Age Range:</string>
    <string name="reasons_text">Most reasons travel purposes:</string>
    <string name="rating_text">Most recent travel rating:</string>
    <string name="Variable_text">Will change</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="thank_you">Thank you for your participation!</string>
</resources>